<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Get Fit</string>
    <string name="edit_message">Enter a message</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="stairs">Stairs</string>
	<string name="steps">Steps</string>
	<string name="add_name_title">Please Enter Record Name</string>
	<string name="add_steps_title">Please Enter Step Goal</string>
	<string name="add_stair_title">Please Enter Stair Goal</string>
	<string name="add_end_title">Select Completion Date</string>
	<string name="add_record">Add Record</string>
	<string name="add_start_title">Select Start Date</string>
	
	<string name="track_name">Name: </string>
	<string name="track_step">Steps to Complete: </string>
	<string name="track_stair">Stairs to Complete: </string>
	<string name="track_start">Date Started on: </string>
	<string name="track_end">Date to Complete by: </string>
    
</resources>
