<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="464dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_name_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_steps_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewStairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_stair_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextStairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_start_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <DatePicker
            android:id="@+id/datePickerStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:dateTextAppearance="@android:style/TextAppearance.Small" />

        <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_end_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <DatePicker
            android:id="@+id/datePickerEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <Button
            android:id="@+id/buttonAddRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addActivity"
            android:text="@string/add_record" />

    </LinearLayout>

</ScrollView>